feat: chatbot working

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,11 @@
   }
 }
 
+html {
+  font-family: var(--font-inter);
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
